--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <ul class="list">
-          <li><a class="logo" href="index.html">WebStudio</a></li>
+          <li><a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a></li>
           <li><a class="web-bookmarks" href="">Agencja </a></li>
           <li>
             <a class="web-bookmarks" href="portfolio.html class=">Portfolio</a>
@@ -170,7 +170,7 @@
     </main>
     <footer class="background">
       <ul class="list">
-        <li><a href="index.html" class="logo">WebStudio</a></li>
+        <li><a class="logo-web" href="index.html">Web<span class="logo-studio-white">Studio</span></a></li>
       </ul>
       <address class="address white">
         m. Warszawa, Aleje Jerozolimskie 21 <br />
