--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
           <li><a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a></li>
           <li><a class="web-bookmarks" href="">Agencja </a></li>
           <li>
-            <a class="web-bookmarks" href="portfolio.html class=">Portfolio</a>
+            <a class="web-bookmarks" href="portfolio.html">Portfolio</a>
           </li>
           <li><a class="web-bookmarks" href="">Kontakt</a></li>
         </ul>
