--- a/portfolio.html
+++ b/portfolio.html
@@ -169,18 +169,15 @@
       </section>
     </main>
     <footer class="background">
-      <ul class="list">
-        <li><a class="logo-web" href="index.html">Web<span class="logo-studio-white">Studio</span></a></li>
-      </ul>
+      <a class="logo-web" href="index.html"
+        >Web<span class="logo-studio-white">Studio</span></a>
       <address class="address white">
-        m. Warszawa, Aleje Jerozolimskie 21 <br />
-        <a class="address grey" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <br />
-        <a class="address grey no-underline" href="tel:+48 111 111 111"
-          >+48 111 111 111</a
-        >
+        <ul class="list">
+          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li><a class="address grey" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a></li>
+          <li><a class="address grey no-underline" href="tel:+48 111 111 111">+48 111 111 111</a></li>
+        </ul>
       </address>
     </footer>
   </body>
