--- a/portfolio.html
+++ b/portfolio.html
@@ -168,15 +168,20 @@
         </ul>
       </section>
     </main>
-    <footer class="background">
+<footer class="background">
       <a class="logo-web" href="index.html"
         >Web<span class="logo-studio-white">Studio</span></a>
-      <address class="address white">
+      <address>
+        <p class="address white">m. Warszawa, Aleje Jerozolimskie 21</p>
         <ul class="list">
-          <li>m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li><a class="address grey" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a></li>
-          <li><a class="address grey no-underline" href="tel:+48 111 111 111">+48 111 111 111</a></li>
+          <li>
+            <a class="address grey" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a>
+          </li>
+          <li>
+            <a class="address grey no-underline" href="tel:+48 111 111 111"
+              >+48 111 111 111</a>
+          </li>
         </ul>
       </address>
     </footer>
