--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
   </head>
   <body class="body">
     <header>
       <nav>
-        <ul class="list">
-          <li><a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a></li>
+      <a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a>
+        <ul class="list"> 
           <li><a class="web-bookmarks" href="">Agencja </a></li>
           <li>
             <a class="web-bookmarks" href="portfolio.html">Portfolio</a>
@@ -24,12 +23,10 @@
           <li><a class="web-bookmarks" href="">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="mail-phone"
-        >info@devstudio.com</a
-      >
-      <p>
-        <a href="tel:+48 111 111 111" class="mail-phone">+48 111 111 111</a>
-      </p>
+      <ul>
+      <li><a href="mailto:info@devstudio.com" class="mail-phone"
+             >info@devstudio.com</a></li>
+      <li><a href="tel:+48 111 111 111" class="mail-phone">+48 111 111 111</a></li>
     </header>
     <main>
       <section class="background">
