--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
   <body class="body">
     <header>
       <nav>
-        <ul class="list">
-          <li><a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a></li>
+         <a class="logo-web" href="index.html">Web<span class="logo-studio">Studio</span></a>
+         <ul class="list">
           <li><a class="web-bookmarks" href="">Agencja </a></li>
           <li>
             <a class="web-bookmarks" href="portfolio.html">Portfolio</a>
@@ -24,12 +24,11 @@
           <li><a class="web-bookmarks" href="">Kontakt</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com" class="mail-phone"
-        >info@devstudio.com</a
-      >
-      <p>
-        <a href="tel:+48 111 111 111" class="mail-phone">+48 111 111 111</a>
-      </p>
+      <ul>
+        <li><a href="mailto:info@devstudio.com" class="mail-phone"
+               >info@devstudio.com</a></li>
+        <li><a href="tel:+48 111 111 111" class="mail-phone">+48 111 111 111</a></li>
+      </ul>
     </header>
     <main>
       <button type="button" class="button">Wszystkie</button>
