--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a class="web-bookmarks" href="">Kontakt</a></li>
         </ul>
       </nav>
-      <ul>
+       <ul class="list">
         <li><a href="mailto:info@devstudio.com" class="mail-phone"
              >info@devstudio.com</a></li>
         <li><a href="tel:+48 111 111 111" class="mail-phone">+48 111 111 111</a></li>
